Styling: Fix todo item overflow and positioning of filters/checkbox components

--- a/src/client/stylesheets/app.css
+++ b/src/client/stylesheets/app.css
@@ -2,13 +2,7 @@ html {
   font-family: 'Roboto';
 }
 
-.content {
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-}
-
-.title {
+h1 {
   font-size: 32px;
   margin: 10px 0;
   font-weight: 600;
